--- a/done.html
+++ b/done.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+   <head>
+      <title>Thank You!</title>
+      <meta http-equiv = "refresh" content = "3; url = https://nightmc.co" />
+   </head>
+   <body>
+      <p>Loading!</p>
+   </body>
+Thanks For Adding Night MC Bot to your server to get started type .help In a channel!
 
+</html>
