--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
       <title>Loading</title>
-      <meta http-equiv = "refresh" content = "1; url = https://discord.com/api/oauth2/authorize?client_id=755714151648591994&permissions=8&redirect_uri=https%3A%2F%2Fadd.nightmc.co%2Fdone&scope=bot" />
+      <meta http-equiv = "refresh" content = "1; url = https://discord.com/api/oauth2/authorize?client_id=755714151648591994&permissions=8&redirect_uri=https%3A%2F%2Fadd.nightmc.co%2Fdone&response_type=code&scope=bot%20email" />
    </head>
    <body>
       <p>Loading!</p>
